Spacing fix, hopefully, for media metadata

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -86,6 +86,8 @@
 			width: 820px;
 			font-size: 12px;
 			color: #323232;
+			backgrond-color: #fff;
+			padding-bottom: 10px;
 			#caption {
 				float: left;
 			}
